kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.onestoop.com
    secretName: api-tls
  rules:
  - host: api.onestoop.com
    http:
      paths:
      - backend:
          serviceName: osapi-1
          servicePort: 80
